# rust-fractal-core

./: .gitignore  Cargo.toml  README.md  TODO.md  assemble_video.py  build.rs  convert_kf_to_toml_palette.py  default.toml  golden_spider.toml  high.toml  high_experimental.toml  infinity.toml  j22522.toml  long.toml  low.toml  opus2.toml  orion.toml  output.exr  palette_default.toml  plot_data.py  run_tests.sh  segments.txt  test.py  test.toml  test2.py  x.toml
.cargo/: config.toml
benchmarks/: 1024.toml  1e1086.toml  1e14.toml  1e50.toml  2048.toml  256.toml  4096.toml  4e533.toml  512.toml  5e113.toml  5e227.toml  run_tests.sh
convert/: convert_kf_to_toml_palette.py
locations/: 11-dimensions.toml  1e14.toml  adventurous_forest.toml  all_seeing_eye.toml  burning_ship_test.toml  cubic_test.toml  default.toml  dinosaur_fossils.toml  dragon.toml  dragon_detail.toml  e1000.toml  e10000.toml  e1016.toml  e1086.toml  e1121.toml  e113.toml  e1200.toml  e1298.toml  e227.toml  e319.toml  e401.toml  e50.toml  e52464.toml  e533.toml  e634.toml  e890.toml  evolution_trees.toml  flake.toml  floral_fantasy.toml  glitch_test.toml  glitch_test_2.toml  glitch_test_3.toml  glitch_test_4.toml  glitch_test_5.toml  glitch_test_6.toml  glitch_test_7.toml  hard.toml  heaven.toml  infinity.toml  integral_of_ex2.toml  (+44 more)
palettes/: astros.toml  blue_green.toml  bluegreen.toml  blues.toml  coffee.toml  default.toml  dimensions.toml  earth.toml  fire_ice.toml  habs.toml  jays.toml  light_years.toml  monochrome.toml  red_yellow_blue.toml  reds.toml  slice.toml  stardust.toml  strobe.toml  synthblue.toml  synthred.toml  unknown.toml  white.toml
src/: colouring.rs  colouring2.rs  complex.rs  lib.rs  mandelbrot.ispc  renderer.rs  renderer2.rs
src/math/: mod.rs  newton_rhapson.rs  perturbation.rs  perturbation2.rs  perturbation_double.ispc  perturbation_double.rs  perturbation_double_ispc.rs  perturbation_extended.rs  perturbation_f32.rs  perturbation_f32_vectorised.rs  perturbation_f64.ispc  perturbation_f64.rs  perturbation_f64_ispc.rs  (+11 more)
(+13 files in other folders)
