[package]
name = "rust_fractal"
version = "0.4.0"
authors = ["jackyarndley <34801340+jackyarndley@users.noreply.github.com>"]
description = "Fast, efficient mandelbrot set renderer."
edition = "2018"

[dependencies]
image = "0.23.6"
rand = "^0.7.3"
num-complex = "^0.2.4"
rayon = "1.3.1"
rug = "1.9.0"
itertools = "^0.9.0"
exr = "^0.8.0"
smallvec = "^1.4.2"
clap = "3.0.0-beta.1"
config = "0.9"

#Additional commands that can improve performance (maybe by around 5-10%)
[profile.release]
#lto = "fat"
#codegen-units = 1
#debug = true
